refactor: convert several classes to use records and improve method calls for consistency